--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,3 +1,4 @@
-- implement the following commands:
-	playlists - show names of all playlists you have in youtube
+- fix error in pytconf when running without argument.
+- share the auth code with pycontacts (it has similar code).
+- implement the cleanup command
 	clean_deleted_or_private - clean deleted or private videos from a specific playlist
