more todo items

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,6 +1,8 @@
 - fix error in pytconf when running without argument.
 - share the auth code with pycontacts (it has similar code).
 	How do we do that? Some other module?
+- implement a "mark as WATCHED" to a playlist.
+- implement download ids to a playlist.
 - implement the cleanup command
 	clean_deleted_or_private - clean deleted or private videos from a specific playlist
 - check for duplicates in a list of playlists.
