--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,3 +1,4 @@
 - remove private vidoes.
 - implement argument free dump.
 - finish implementing the "read ids from folder" functionality and configure it properly.
+- find how to list the "builtin" lists like "Watch later" and so how to clean them up.
