--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -3,3 +3,10 @@
 	https://github.com/longpdo/youtube-dl-watch-later-playlist
 - implement argument free dump.
 - find how to list the "builtin" lists like "Watch later" and so how to clean them up.
+
+features to implements:
+- download watch later
+- clear watch later
+- add list to list
+- add file to list
+- clear list
